changed deprecated methods